further banner debugging

--- a/index.html
+++ b/index.html
@@ -20,64 +20,7 @@
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://informthevotenj.com">
     </head>
-<body>
-
-    <!-- old stuff??? -->
-    <!-- <dialog id="Modal1" class="modal">
-
-        
-        <div class="modal-content">
-          <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close1' class="close">
-          <h4 class="quick-sum">Welcome to Inform the Vote!</h4>
-          <h6 class="page-title">A Brief Introduction Of The Site And How To Use It</h6>
-
-          <p>
-            With the shutting down of newspapers all across the country, information regarding elections is scattered all over the internet and oftentimes appears biased because
-            it is coming from the candidates themselves and their parties. We've scoured the information landscape and consolidated it on this hub, with a focus on New Jersey,
-            and more specifically Cumberland County. This year Cumberland County has 5 primary elections:
-         </p>
-
-         <ul>
-            <li><strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong></li>
-            <br>
-            <br>
-            <li><strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong></li>
-            <br>
-            <br>
-            <li><strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong></li>
-            <br>
-            <br>
-            <li><strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong></li>
-            <br>
-            <br>
-            <li><strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong></li>
-            <br>
-          </ul>
-
-          <p>
-            Click on the primary election you're interested in and navigate the interactive primary ballots to learn more about the 
-            candidates. We've provided summaries as there is a lot of information to digest. We suggest skimming the summaries and the 
-            candidate pages we've provided to help streamline the process. However, all official campaign pages and social media links are provided 
-            to ensure access to the full amount of information and to verify any of our info. Don't forget to use the back 
-            button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top 
-            left of the screen to help broader
-            navigation. 
-            <br>
-            <br>
-            Given that we spend a lot of time researching and analyzing voting information, there is a good chance we are making observations the 
-            average constituent might not make. We invite you to take a look at our 
-            <a href="https://www.informthevotenj.com/child_pages/cc-elections/unanswered_questions">Unanswered Questions</a> page to help bring 
-            awareness to potential gaps in information regarding our county elections. That being said, there are also a lot of things we might miss. 
-            So if you'd like to help contribute, please join our <a href="https://www.facebook.com/groups/781111154116727">Facebook Group.</a>
-            <br>
-            <br>
-            Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this 
-            site, take a closer look at our home page. 
-            Click the red x at the top right of pop-up boxes like this to proceed through the site. Have fun!
-          </p>
-
-        </div>
-    </dialog> -->
+<body>    
 
     <div class="menu-wrap menu-wrap-homepage">
         <input type="checkbox" autocomplete='off' id="toggler" class="toggler">
@@ -144,11 +87,27 @@
                  Watch to get an idea of the upcoming elections here in Cumberland County.
             </div>
             <div class="cta-link-box">
-                 <button class="hp-banner-button">Video Summary</button>
+                 <button id ='videoSummary' class="hp-banner-button">Video Summary</button>
                  <button id='actualVideo' class="hp-banner-button">Video</button>
             </div>
         </div>
     </div>
+
+    <!-- text summary modal -->
+    <dialog id="Modal1" class="modal">
+
+        <div class="modal-content">
+          <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close1' class="close">
+          <h4 class="quick-sum">Intro to Election Season 2024</h4>
+          <h6 class="page-title">Read to get an idea of the upcoming elections here in Cumberland County.</h6>
+
+          <p>
+            
+         </p>
+
+        </div>
+
+    </dialog>
 
     <!-- modal box hidden by default -->
     <dialog id="Modal2" class="modal">
