dummy check updates for commissioners race

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -80,9 +80,12 @@
                 to support senior housing and healthcare, and to provide recreational advancements. 
                 <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a>. Also, Austino and Capizola have openly supported the Harris/Walz 
                 ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
-                so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. There was also a facebook post on August 13th which 
-                additionally states his agenda will include educational excellence, environmental sustainability, and fiscal responsibility. Click the red x at the top of this box and then 
-                scroll down down for more in-depth information and sources.
+                so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. There was a facebook post on August 13th which 
+                additionally states his agenda will include educational excellence, environmental sustainability, and fiscal responsibility. Also, it seems as though Capizola did a few 
+                interviews with Celeste Riley, which you can view 
+                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>, and 
+                <a href="https://www.facebook.com/wvltradio/videos/849795337255055">here</a>, but we haven't had time to review them yet.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
           
