--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -88,7 +88,7 @@
           
           </dialog>
     
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
 <div class="container">
@@ -123,15 +123,15 @@
                  <p>This election is on November 5th, 2024</p>
              </div>
              <div class="animal-box">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
