--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -88,19 +88,25 @@
             The two republican incumbents for County Commissioner inherently have experience, generally promote conservative values and policy, and have addressed local issues from a 
             conservative perspective, such as voting no for the Middle Mile Broadband project for fiscally conservative reasons and bringing up concerns on how national immigration policy is 
             affecting our county (apparently MS-13 gang members have been identified here in Cumberland County - Commissioner Sileo stated at a recent Republican breakfast meeting). 
-            that in mind, it is the opinion of InformTheVote that the Democrat challengers ought to present more information on why a change in leadership might be beneficial.
+            With that in mind, it is the opinion of InformTheVote that the Democrat challengers ought to present more information on why a change in leadership might be beneficial.
             With such little information regarding how local candidates might handle local issues, it remains difficult to know what the actual choices are, and it 
             could be fair to say that the incumbents are doing a good job... if it ain't broke, don't fix it. On the other hand, since no differentiations have been made regarding the candidates
-            from their parties, with some candidates openly <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">endorsing their national ticket</a>
-            , if you more generally agree with Democrat or Republican party platforms, voting party-line is also understandable. Be sure to check out the  
+            from their parties, with some candidates openly <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">endorsing their national ticket</a>,
+            if you more generally agree with Democrat or Republican party platforms, voting party-line is also understandable. Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
             <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/26/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
-
-            Hopefully more information will come out and some type of 
-            town-hall or candidates forum will happen in the coming months to help inform our choices.
-            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            to post their specific platform (still not posted as of 9/8/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). We know some of that information has trickled 
+            through some sources like campaign speeches and the CNN interview, but it's difficult to put that all together and know how it might apply to the County.
+            To get some sourced idea of what has been going on at the county level, you can view our <a href="../cc-elections/cc_election_issues.html">Cumberland Couty Issues</a> page, 
+            our <a href="https://www.youtube.com/watch?v=vi0tkfXD6jc&t=6s">Nabb Ave Extension report</a>, some info regarding the
+            <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=849422293952279&ref=share">election ballot design</a>, a videa regarding 
+            <a href="https://www.facebook.com/gus.maier.5/videos/1578098566105862?idorvanity=442220931182672">design of election mailers</a>, and a video regarding issues with the CCIA
+            <a href="https://fb.watch/utMMt99v3C/">issues with the CCIA</a>. You can also do a bit of following yourself by joining the 
+            <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland NJ GOP facebook group</a> and the
+            <a href="https://www.facebook.com/groups/442220931182672">Cumberland NJ Dems facebook group</a>.
+            Hopefully more county-specific information will come out and some type of town-hall or candidates forum will happen in the coming months to help inform our 
+            choices. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
