--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -82,7 +82,12 @@
                 9/1/2024, there have been some issues regarding the Clerk's office regarding things such as the 
                 <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
                 <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
-                is being presented to the public. 
+                is being presented to the public. You can also view what looks like a video of her and John Capizola 
+                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>, and 
+                <a href="https://www.facebook.com/wvltradio/videos/849795337255055">here</a>, but we haven't had time to review them yet. It also seems as though they 
+                have been posting more regular information in their <a href="https://www.facebook.com/teamrileyaustinocapizola/">faebook group</a>, so be sure to follow 
+                that if you'd like to stay current. Similarly, the <a href="https://www.facebook.com/groups/442220931182672">Cumberland NJ Dems</a> have been regularly 
+                posting as well.
                 Click the x at the top red of this box to go back to the page.
               </p>
             </div>
