county clerk dummy check updates

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -89,7 +89,8 @@
                 know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
                 acting as the known liason between the public and the government, which is a common perception of the role. She also released the following video to help clarify the 
                 role of the clerk:
-                <a href="https://www.facebook.com/reel/360821143737277">Facebook Reel</a>                  
+                <a href="https://www.facebook.com/reel/360821143737277">Facebook Reel</a>. You might also get some more updates by following the 
+                <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
 
                 Click the x at the top red of this box to go back to the page, then scroll down for more info.
               </p>
