--- a/child_pages/cc-elections/Candidates/romero.html
+++ b/child_pages/cc-elections/Candidates/romero.html
@@ -81,7 +81,9 @@
                 clarify his individual stances and how he differentiates himself from his opponents, with no response. He was also asked in person about whether he received the email, to which
                 he said he would look for it. At Deerfield Day, we asked his challenger Austino what his platform was, to which he expressed concerns about the commissioner board 
                 potentially spending too much money on county parks, and when we cross-checked this with Romero, Romero said (paraphrased) "Those projects are within the county budget, 
-                there's nothing to be concerned about." Click the x at the top red of this box to go back to the page.
+                there's nothing to be concerned about." You might also get some more updates by following the 
+                <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
+                Click the x at the top red of this box to go back to the page.
               </p>
             </div>
           
