--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -83,6 +83,8 @@
                 he is directly different from his democrat challengers. He has been reached out to via his government email to clarify his individual stances and how he differentiates 
                 himself from his opponents, with no response. However, he also did point out at the breakfast meeting that with the current 7-0 Republican board, productivity has been much more 
                 efficient since there are now significantly less political roadblocks, with the commissioner board being all on the same page. 
+                You might also get some more updates by following the 
+                <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
                 Click the x at the top red of this box to go back to the page.
             </div>
           
