--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -74,7 +74,7 @@
         <div class="modal-content">
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary<h4>
-          <h6 class="page-title">County Commissioner</h6>
+          <h6 class="page-title">County Clerk</h6>
           <p>This year the County Clerk seat is open for election. The current Democrat Clerk, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">Celeste Riley</a>, 
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been
@@ -89,7 +89,7 @@
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
             <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/27/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
+            to post their specific platform (still not posted as of 9/8/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -161,7 +161,7 @@
           <button class="quick-summary-reopen">quick election summary</button>
           
           <div class="sb-top-box"> 
-              <h3>ELECTION DATE: November 7th, 2023</h3>
+              <h3>ELECTION DATE: November 5th, 2024</h3>
               <h2>SAMPLE BALLOT</h2>
               <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
               <h3>COUNTY CLERK</h3>
