millville commissioners dummy check updates

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -74,7 +74,7 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Carole E. Cossaboon</h6>
               <p>
-                As of right now, 8/27/2024, we have not received any significant information about Ms. Cossaboon outside of a quick review of her facebook sites.
+                As of right now, 9/8/2024, we are waiting for candidate Cossaboon to follow up on our inquiries.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
