--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -77,8 +77,14 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">Millville City Commissioners</h6>
           <p>
-            As of today, 8/27/2024, we are still awaiting information from the Millville City Clerk about the particulars of this election. As of right now, we only know that 
-            Maria Darminio and Carole Cossaboon are running, with some limited information available on facebook. We are waiting for follow ups from them as well.
+            As of today, 9//2024, we have been able to establish contact with some of the candidates to gather some information, but we expect much more to come 
+            in soon, including potential interviews with the current mayor and vice mayor to help us understand current issues facing the city. As of now, our 
+            basic understanding is that Marissa Ranello's seat is open for election, with her running for re-election and three challengers. Robert Mcquade is 
+            one challenger who has years of experience on the school board and about one year of experience on the commissioner's board, and he plans to send us 
+            more information soon. Another challenger, Maria Darminio, is a popular bartender at a local bar, OVT, and she plans to send us information soon. 
+            Carole Cossaboon has a bit of a presence on her facebook campaign group, but we are looking for her to follow up on sending us information.
+            All in all, assuming everyone follows up on sending over information, you will have an informed choice. Until then, stay tuned.
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
@@ -125,7 +131,7 @@
         <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>MILLVILLE CITY COMMISSIONERS</h3>
