--- a/child_pages/cc-elections/Candidates/darminio.html
+++ b/child_pages/cc-elections/Candidates/darminio.html
@@ -74,6 +74,7 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Maria Darminio</h6>
               <p>
+                As of right now, 9/8/2024, we are waiting for candidate Darminio to follow up on our inquiries.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
