--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -74,14 +74,14 @@
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
-          <h6 class="page-title">House of Representatives for Congressional District 2</h6>
+          <h6 class="page-title">Lawrence Township Committee</h6>
           <p>
             A seat on the Lawrence Township committee is up for election this year, with incumbent Mayor Miletta and challenger Charlie Woody in the race. 
             Miletta has been doing the job for 17 years and through our conversation with him on the phone, he seems to be very dedicated and hands on, 
-            even so far as to spend money out of pocket to help the district acquire resources. On the other hand, we haven't been able to find any 
-            information about Woody, but Miletta seems to think he is making some traction on social media, but without a comparable resume to that 
-            of Miletta.
-                            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            even so far as to spend personal time and donating resources like steel to help the township repair equipment. On the other hand, we haven't been 
+            able to find any information about Woody, but Miletta seems to think he is making some traction on social media, but without a comparable resume to 
+            that of Miletta.
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
         </div>
@@ -134,7 +134,7 @@
         <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>Lawrence Township Committee</h3>
