vineland mayor dummy check updates

--- a/child_pages/cc-elections/Candidates/fanucci.html
+++ b/child_pages/cc-elections/Candidates/fanucci.html
@@ -75,9 +75,9 @@
                 Mayor Fanucci has been mayor for the past seven years and was actually the first significant contact we were able to make to open the 
                 door into local politics. He has been very communicative with us and you can see his detailed election related information below. He plans 
                 to make many investments including restoration projects, preparing new sites for the industrial park, and new entertainment sites. He recognizes 
-                the city has some issues such as needing job creation, public safety, and infrastructure improvements, but that he also already has a team in 
-                place that will continue to work to improve these areas in a fiscally responsible way. And when comparing himself to his opponent, he believes 
-                his opponent represents the old ways of thinking, and now is the time to continue to improve the city by sticking to the current plans. 
+                the city has some common, ongoing issues such as needing job creation, public safety, and infrastructure improvements, but that he also already 
+                has a team in place that will continue to work to improve these areas in a fiscally responsible way. And when comparing himself to his opponent, 
+                he believes his opponent represents the old ways of thinking, and now is the time to continue to improve the city by sticking to the current plans. 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
