commercial township school board dummy check updates

--- a/child_pages/cc-elections/Candidates/forkin.html
+++ b/child_pages/cc-elections/Candidates/forkin.html
@@ -10,7 +10,7 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
-    <body style="background-color: #b22222;">
+    <body>
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
             <div class="hamburger">
@@ -99,7 +99,7 @@
              </div>
              <div class="incum-or-challenger">
                  <div class="incumbent active">Incumbent</div>
-                 <div class="challenger active">Challenger</div> 
+                 <div class="challenger inactive">Challenger</div> 
              </div>
          </div>
          <div class="candidate-pic-box">
@@ -121,15 +121,15 @@
                  </div>
     
                  <div class="animal-box">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                     <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                     <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
                  </div>
              </div>
          </div>
