--- a/child_pages/cc-elections/Candidates/whitaker.html
+++ b/child_pages/cc-elections/Candidates/whitaker.html
@@ -92,7 +92,7 @@
              <div class="position">Commercial Township School Board</div>
          </div>
          <div class="incum-or-challenger">
-             <div class="incumbent active">Incumbent</div>
+             <div class="incumbent inactive">Incumbent</div>
              <div class="challenger active">Challenger</div> 
          </div>
      </div>
