fairfield school board dummy check updates

--- a/child_pages/cc-elections/fairfield_school_board_2024.html
+++ b/child_pages/cc-elections/fairfield_school_board_2024.html
@@ -78,7 +78,7 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">County Commissioner</h6>
           <p>This year 3 seats are open on the Fairfield Township School Board. After scouring the internet and contacting the County Clerk's office via OPRA requests, we still, as of 
-            today 8/27/2024, have no pertinent information regarding this election. Click the red x at the top of this box and then scroll down down for more in-depth information.
+            today 9/8/2024, have no pertinent information regarding this election. Click the red x at the top of this box and then scroll down down for more in-depth information.
           </p>
         </div>
       
@@ -144,9 +144,9 @@
         <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
-            <h3>MILLVILLE CITY COMMISSIONERS</h3>
+            <h3>Fairfield Township School Board</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6> 
             <p class="instructions school-board-instructions">( Click or tap on candidate name to learn more about them )</p>
