--- a/child_pages/cc-elections/Candidates/ridgeway.html
+++ b/child_pages/cc-elections/Candidates/ridgeway.html
@@ -74,7 +74,7 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Cory E. Ridgeway</h6>
               <p>
-                We have not been able to find any information on Mr. Woody as of yet.
+                We have not been able to find any information on Candidate Ridgeway as of yet.
               </p>
             </div>
         </dialog>
