lawrence school board dummy check updates

--- a/child_pages/cc-elections/Candidates/cook.html
+++ b/child_pages/cc-elections/Candidates/cook.html
@@ -72,7 +72,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Charlie N. Woody</h6>
+              <h6 class="page-title">Jacqueline Cook</h6>
               <p>
                 We have not been able to find any information on Ms. Cook as of yet.
               </p>
