vineland school board dummy check updates

--- a/child_pages/cc-elections/Candidates/medio.html
+++ b/child_pages/cc-elections/Candidates/medio.html
@@ -114,15 +114,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
