--- a/child_pages/cc-elections/Candidates/perez.html
+++ b/child_pages/cc-elections/Candidates/perez.html
@@ -136,7 +136,7 @@
     <div class="candidate-agenda">
 
         <h4 class="sub-heading">individual agenda</h4>
-            <div class="agenda-thesis">
+            <div class="agenda-thesis can-sec">
                 Direct quote from communication with Perez:
                 <br>
                 <br>
@@ -150,7 +150,7 @@
             <br>
 
             <h4 class="sub-heading">Stance on Issues</h4>
-            <div class="experience">
+            <div class="experience can-sec">
                 Direct quote from communication with Perez:
                 <br>
                 <br>
@@ -164,7 +164,7 @@
             <br>
 
             <h4 class="sub-heading">Experience</h4>
-            <div class="experience">
+            <div class="experience can-sec">
                 <ul>
                     <li>Finanial advisor in the financial industry for approximately 35 years.</li>
                     <li>Cumberland County board of trustees member for 8 years, president for 2 1/2 years</li>
