tutorial video added to index page

--- a/index.html
+++ b/index.html
@@ -198,11 +198,10 @@
         <h3 class="videos-heading">VIDEOS</h3>
     <div class="hp-video-box">
         <div class="video-box-sm">
-            <!-- <iframe src="https://www.youtube.com/embed/H2rQvSNB9lk?si=yTAoPWGzAmPxAQW-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            -->
+            <iframe src="https://www.youtube.com/embed/RzMenmzY_-M?si=3CpJROnXAzE-MVPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-heading-sm"></h3>
             <div class="video-sm-desc">
-                
+                Site Tutorial
             </div>
         </div>
         <div class="video-box-sm">
