mayor race summary correction

--- a/child_pages/cc-elections/vineland_mayor_2024.html
+++ b/child_pages/cc-elections/vineland_mayor_2024.html
@@ -82,7 +82,7 @@
             recent information available about Romano. Fanucci has a clear 5 point plan regarding his agenda, is aware of current issues and has a plan in 
             place to address them, and has a solid resume of experience to back up his ability to execute. We have come across one issue regarding 
             <a href="https://www.aol.com/state-tells-vineland-put-fired-075023140.html">lawsuits surrounding the police department</a>
-            , which seem to have been recently resolved. We were able to make contact with Romano, but he was hesitant about sharing. Unless Romano is 
+            , which seem to have an ongoing investigation. We were able to make contact with Romano, but he was hesitant about sharing. Unless Romano is 
             willing to publicly make a case for himself, we believe it will be tough for voters to consider him over 
             Fanucci. Some of that may be done in upcoming radio time, which we posted on his candidate page on this site.
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
