--- a/child_pages/cc-elections/Candidates/miletta.html
+++ b/child_pages/cc-elections/Candidates/miletta.html
@@ -84,6 +84,7 @@
                 his whole life, but it is more of a label than a strict ideology for him, as he has been working across the aisle his whole political career. In terms, 
                 of comparing himself to his opponent, he believes the opponent is a young guy who is gaining some traction on social media, but doesn't have the 
                 experience to do the job with the same competence level as Miletta. 
+                Click the x at the top red of this box to go back to the page.
               </p>
             </div>
         </dialog>
